--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,35 +29,26 @@
         <activity
             android:name=".screens.login.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".screens.login.RegisterActivity"
             android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".screens.login.UpdateActivity"
             android:label="@string/title_activity_update"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".screens.home.HomeActivity"
             android:label="@string/title_activity_home" />
-
         <activity
             android:name=".screens.home.CourseActivity"
             android:label="@string/title_activity_course" />
-
         <activity
             android:name=".screens.chat.ChatlogActivity"
             android:label="@string/title_activity_chatlog" />
@@ -67,6 +58,8 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <activity android:name=".screens.checkin.CheckInActivity"></activity>
     </application>
 
 </manifest>
